fix message drop down unread not showing up

--- a/src/styles/message-drop-down.scss
+++ b/src/styles/message-drop-down.scss
@@ -45,7 +45,7 @@ message-drop-down {
     color: $neutral-color;
   }
 
-  ul.dropdown > li a {
+  ul li a {
     border-left: 5px solid $white;
 
     padding-left: 10px;
